--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -46,6 +46,10 @@ flutter:
 
   uses-material-design: true
 
+  assets:
+    - assets/lizzard.jpg
+
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
