--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   http: ^1.2.0
   firebase_core: ^2.27.0
   firebase_database: ^10.4.9
+  fl_chart: ^0.68.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
