--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   cloud_firestore: ^4.17.4
-
+  flutter_launcher_icons: ^0.13.1
   cupertino_icons: ^1.0.2
   http: ^1.2.0
   firebase_core: ^2.27.0
@@ -39,11 +39,17 @@ dependencies:
   fl_chart: ^0.68.0
   intl: ^0.19.0
 
+flutter_launcher_icons:
+  android: true
+  image_path: "assets/leaf.png"
+
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^2.0.0
+
 
 flutter:
 
