Started working on the notification system.

--- a/flutter/android/app/build.gradle
+++ b/flutter/android/app/build.gradle
@@ -67,4 +67,9 @@ flutter {
     source '../..'
 }
 
-dependencies {}
+dependencies {
+    implementation platform('com.google.firebase:firebase-bom:latest_version')
+    implementation 'com.google.firebase:firebase-messaging'
+}
+
+apply plugin: 'com.google.gms.google-services'
