--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.2.0
   firebase_core: ^2.27.0
+  firebase_messaging: ^14.9.3
+  firebase_auth: ^4.19.6
   firebase_database: ^10.4.9
   fl_chart: ^0.68.0
   intl: ^0.19.0
