--- a/flutter/pubspec.yaml
+++ b/flutter/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_database: ^10.4.9
   fl_chart: ^0.68.0
   intl: ^0.19.0
+  flutter_local_notifications: ^17.1.2
 
 flutter_launcher_icons:
   android: true
